--- a/webProgramming/week2/Practice02.html
+++ b/webProgramming/week2/Practice02.html
@@ -1,62 +1,96 @@
 <!--20220803 컴퓨터학과 정여진-->
+<!--크롬 최적화-->
 <!DOCTYPE html>
     <html lang="ko">
         <head>
             <title>Practice02</title>
+            <style>
+                table{
+                    border-collapse: collapse;
+                    margin:auto;
+                    margin-top: 10px;
+                }
+                thead, tfoot, .title{
+                    background-color:#ECECEC;
+                    text-align: center;
+                    font-weight:600;
+                }
+            </style>
         </head>
         <body>
-            <table>
-                <th>회원가입</th>
+            <table border="1">
+                <thead>
+                    <th colspan="2">회원가입</th>
+                </thead>
                 <tbody>
                     <tr>
-                        <td>아이디</td>
-                        <td><input type="text"></td>
-                        <td><input type="button" value="중복확인"></td>
-                    </tr>
-                    <tr>
-                        <td>패스워드</td>
-                        <td><input type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>성별</td>
+                        <td class="title">아이디</td>
                         <td>
-                            <input type="radio" name="gen" value="1">남
-                            <input type="radio" name="gen" value="2">여
+                            <input type="text" size="33">
+                            <input type="button" value="중복확인">
                         </td>
                     </tr>
                     <tr>
-                        <td>국적</td>
-                        <td><input type="text"></td>
-                        <td><input type="button" value="국적확인" disabled></td>
-                    </tr>
-                    <tr>
-                        <td>이메일</td>
+                        <td class="title">패스워드</td>
                         <td><input type="text"></td>
                     </tr>
                     <tr>
-                        <td>생일</td>
+                        <td class="title">성별</td>
+                        <td>
+                            <input type="radio" name="gen" value="1">남
+                            <input type="radio" name="gen" value="2" checked>여
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="title">국적</td>
+                        <td>
+                            <input type="text">
+                            <input type="button" value="국적변경" disabled>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="title">휴대폰</td>
+                        <td>
+                            <select>
+                                <option value="1">010</option>
+                                <option value="2">011</option>    
+                            </select> -
+                            <input type="text" maxlength="4" size="4"> -
+                            <input type="text" maxlength="4" size="4">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="title">이메일</td>
+                        <td><input type="text"></td>
+                    </tr>
+                    <tr>
+                        <td class="title">생일</td>
                         <td><input type="date"></td>
                     </tr>
                     <tr>
-                        <td>관심분야</td>
-                        <td><input type="checkbox" name="hobby" value="1">뉴스</td>
-                        <td><input type="checkbox" name="hobby" value="2">맛집</td>
-                        <td><input type="checkbox" name="hobby" value="3">책</td>
-                        <td><input type="checkbox" name="hobby" value="4">영화</td>
-                        <td><input type="checkbox" name="hobby" value="5">여행</td>
+                        <td class="title">관심분야</td>
+                        <td>
+                            <input type="checkbox" name="hobby" value="1">뉴스
+                            <input type="checkbox" name="hobby" value="2" checked>맛집
+                            <input type="checkbox" name="hobby" value="3">책
+                            <input type="checkbox" name="hobby" value="4">영화
+                            <input type="checkbox" name="hobby" value="5">여행
+                        </td>
                     </tr>
                     <tr>
-                        <td>가입인사</td>
+                        <td class="title">가입인사</td>
                         <td><textarea>회원들에게 간단한 가입인사를 남겨주세요</textarea></td>
                     </tr>
                     <tr>
-                        <td>증명사진</td>
+                        <td class="title">증명사진</td>
                         <td><input type="file"></td>
                     </tr>
                 </tbody>
                 <tfoot>
-                    <td><input type="submit" value="가입하기"></td>
-                    <td><input type="reset" value="다시작성"></td>
+                    <td colspan="2" style="text-align: center;">
+                        <input type="submit" value="가입하기">
+                        <input type="reset" value="다시작성">
+                    </td>
                 </tfoot>  
             </table>
         </body>
