--- a/webProgramming/week2/practice03/member3.html
+++ b/webProgramming/week2/practice03/member3.html
@@ -26,6 +26,11 @@
                     vertical-align: middle;
                 }
             </style>
+            <script>
+                function member4(){
+                    window.location.href='member4.html'
+                }
+            </script>
         </head>
         <body>
             <form>
@@ -99,7 +104,7 @@
                         </tbody>
                     <tfoot>
                         <td colspan="2" style="text-align: center;">
-                            <input type="submit" value="가입하기">
+                            <input type="button" value="가입하기" onclick="member4()">
                             <input type="reset" value="다시작성">
                         </td>
                     </tfoot>  
