[update] member4파일 완성

--- a/webProgramming/week2/practice03/member4.html
+++ b/webProgramming/week2/practice03/member4.html
@@ -5,8 +5,29 @@
     <head>
         <title>Practice03_4</title>
         <style>
-            image_title{
+            table{
                 width:100%;
+            }
+            div{
+                text-align: center;
+            }
+            .image_flower{
+                margin-top:20%;
+                width:25%;
+            }
+            .text_2{
+                margin-top:30px;
+                margin-bottom:10%;
+            }
+            .table_in{
+                width:60%;
+                margin-left:20%;
+            }
+            .border_1{
+                background-color: #FFDAB9;
+            }
+            .border_2{
+                background-color: #FFEFD5;
             }
         </style>
     </head>
@@ -16,15 +37,22 @@
                 <td><input type="image" src="image/eclass_title.jpg" class="image_title" width="100%"></td>
             </tr>
             <tr>
-                <table>
-                    <tr>
-                        <td><h3>정상적으로 가입되었습니다.</h3><td>
-                        </tr>
-                    <tr>
+                <table class="table_in">
+                    <tr class="border_1">
                         <td>
-                            <input type="image" src="image/flower.gif">
-                            <br>
-                            <h3>가입을 축하합니다.</h3>
+                            <div class="text_1">
+                                <h3>정상적으로 가입되었습니다.</h3>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class="border_2">
+                        <td>
+                            <div>
+                                <input type="image" src="image/flower.gif" class="image_flower">
+                            </div>
+                            <div class="text_2">
+                                <h3>가입을 축하합니다.</h3>
+                            </div>
                         </td>
                     </tr>
                 </table>
@@ -32,3 +60,4 @@
         </table>
     </body>
 </html>
+
