[update] 양쪽 간격 맞춤

--- a/webProgramming/week2/practice03/member2.html
+++ b/webProgramming/week2/practice03/member2.html
@@ -6,22 +6,25 @@
         <title>Practice03_2</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+            table{
+                width:100%;
+            }
             h1{
                 text-align: center;
             }
             h2{
                 text-align: center;
             }
-            table{
-                width:100%
+            table, td, th{
+                border-collapse: collapse;
             }
             input.button_agree{
                 float: right;    
             }
             .table_in{
                 width:65%;
-                margin-left:9%;
-                margin-top:3px;
+                margin-left:auto;
+                margin-right:auto;
             }
             .table_in td{
                 width:50%;
