--- a/webProgramming/week3/Practice05/Practice05.html
+++ b/webProgramming/week3/Practice05/Practice05.html
@@ -1,5 +1,5 @@
 <!--20220803 컴퓨터학과 정여진-->
-<!--크롬 최적화-->
+<!--마이크로소프트엣지 최적화-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -33,11 +33,11 @@
                 background-color: #FFEFD5;
             }
         </style>
-        <script>
+        <script type="text/javascript">
             function closing(){
                 var result = confirm("창을 정말 닫을까요?");
-                    if(result)
-                        window.close;
+                    if(result == true)
+                        window.close();
             }
         </script>
     </head>
