[update] 이미지 위치 변경

--- a/webProgramming/week2/practice03/member3.html
+++ b/webProgramming/week2/practice03/member3.html
@@ -77,8 +77,9 @@
                         </tr>
                         <tr>
                             <td class="title">이메일</td>
-                            <td><input type="text"></td>
+                            <td><input type="text">
                             <input type="image" src="image/check.gif" class="imageAlign">
+                            </td>
                         </tr>
                         <tr>
                             <td class="title">생일</td>
