[update] ajax 5_2과제

--- a/webService/ajax/src/webapp/pizza_json/pizza_json.html
+++ b/webService/ajax/src/webapp/pizza_json/pizza_json.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" 
 	      href="breakneck_new.css" media="screen" />
 	<script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="pizza.js"></script>
+	<script type="text/javascript" src="pizza_json.js"></script>
 </head>
 <body onLoad="document.forms[0].reset();">
 	<div id="main-page">
